force-app/main/default/objects/Torre__c/Torre__c.object-meta.xml
<CustomObject>
    <description>Registro para agrupamento de Unidades por andar ou prédio</description>
    <label>Torre</label>
    <nameField>
        <displayFormat>T{0000}</displayFormat>
        <label>Código de Torre</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Torres</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>