force-app/main/default/objects/Torre__c/fields/Andares__c.field-meta.xml
<CustomField>
    <fullName>Andares__c</fullName>
    <label>Andares</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>