force-app/main/default/objects/Torre__c/fields/Elevadores__c.field-meta.xml
<CustomField>
    <fullName>Elevadores__c</fullName>
    <label>Elevadores</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>