force-app/main/default/objects/Torre__c/fields/PadraoNumeracao__c.field-meta.xml
<CustomField>
    <fullName>PadraoNumeracao__c</fullName>
    <label>Padrão de numeração</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dezena</fullName>
            </value>
            <value>
                <fullName>Centena</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>