force-app/main/default/objects/Torre__c/fields/UnidadesEstoque__c.field-meta.xml
<CustomField>
    <fullName>UnidadesEstoque__c</fullName>
    <label>Unidades em estoque</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>