force-app/main/default/objects/Torre__c/fields/UnidadesPorAndar__c.field-meta.xml
<CustomField>
    <fullName>UnidadesPorAndar__c</fullName>
    <label>Unidades por andar</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>